tests/max_encoded_len_ui/incomplete_attr.stderr
error: Invalid attribute: only `#[codec(dumb_trait_bound)]`, `#[codec(encode_bound(T: Encode))]`, `#[codec(crate = path::to::crate)]`, or `#[codec(decode_bound(T: Decode))]` are accepted as top attribute
 --> $DIR/incomplete_attr.rs:4:9
  |
4 | #[codec(crate)]
  |         ^^^^^

error[E0277]: the trait bound `Example: WrapperTypeEncode` is not satisfied
  --> $DIR/incomplete_attr.rs:3:18
   |
3  | #[derive(Encode, MaxEncodedLen)]
   |                  ^^^^^^^^^^^^^ the trait `WrapperTypeEncode` is not implemented for `Example`
   |
  ::: $WORKSPACE/src/max_encoded_len.rs
   |
   | pub trait MaxEncodedLen: Encode {
   |                          ------ required by this bound in `MaxEncodedLen`
   |
   = note: required because of the requirements on the impl of `Encode` for `Example`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
